--- a/lib/bmvpkenya_web/controllers/page_html/home.html.heex
+++ b/lib/bmvpkenya_web/controllers/page_html/home.html.heex
@@ -92,7 +92,7 @@
         </div>
         <img
           src={~p"/images/wall-post.svg"}
-          alt="Product screenshot"
+          alt="animation of a woman holding a large pen writing on a wall"
           class="w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0"
           width="2432"
           height="1442"
