--- a/lib/bmvpkenya_web/components/layouts/root.html.heex
+++ b/lib/bmvpkenya_web/components/layouts/root.html.heex
@@ -10,6 +10,8 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script defer data-domain="kitemoja.com" src="https://plausible.io/js/script.js">
+    </script>
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
