--- a/lib/bmvpkenya_web/live/article_live/show.html.heex
+++ b/lib/bmvpkenya_web/live/article_live/show.html.heex
@@ -1,31 +1,43 @@
-
-<.header>
-  <:actions>
-    <.link patch={~p"/articles/#{@article}/show/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit article</.button>
-    </.link>
-  </:actions>
-</.header>
-
+<%= if is_author?(@current_user, @article) do %>
+  <.header>
+    <:actions>
+      <.link patch={~p"/articles/#{@article}/show/edit"} phx-click={JS.push_focus()}>
+        <.button>Edit article</.button>
+      </.link>
+    </:actions>
+  </.header>
+<% else %>
+  <.header></.header>
+<% end %>
 <div class="mx-auto max-w-2xl pt-12">
   <h2 class="text-center text-3xl font-bold tracking-light sm:text-4xl">
     <%= @article.title %>
   </h2>
 
   <div class="article-content mt-10 font-normal text-md">
-    <div><%= Phoenix.HTML.Format.text_to_html(@article.content) %></div>
+    <%= if @show_full_article do %>
+      <%= Phoenix.HTML.Format.text_to_html(@article.content) %>
+    <% else %>
+      <%= @article.content |> String.slice(0, 400) |> Phoenix.HTML.Format.text_to_html() %>
+      <.button phx-click="purchase">Buy this article for <%= @article.price %></.button>
+    <% end %>
   </div>
 
-<.back navigate={~p"/articles"}>Back to articles</.back>
+  <.back navigate={~p"/articles"}>Back to articles</.back>
 
-<.modal :if={@live_action == :edit} id="article-modal" show on_cancel={JS.patch(~p"/articles/#{@article}")}>
-  <.live_component
-    module={BmvpkenyaWeb.ArticleLive.FormComponent}
-    id={@article.id}
-    title={@page_title}
-    action={@live_action}
-    article={@article}
-    patch={~p"/articles/#{@article}"}
-  />
-</.modal>
+  <.modal
+    :if={@live_action == :edit}
+    id="article-modal"
+    show
+    on_cancel={JS.patch(~p"/articles/#{@article}")}
+  >
+    <.live_component
+      module={BmvpkenyaWeb.ArticleLive.FormComponent}
+      id={@article.id}
+      title={@page_title}
+      action={@live_action}
+      article={@article}
+      patch={~p"/articles/#{@article}"}
+    />
+  </.modal>
 </div>
